# google-ads-mcp-complete

./: Taskfile.yml  pyproject.toml
src/: auth.py  error_handler.py  tools_ads.py  tools_budgets.py  tools_campaigns.py  tools_complete.py  tools_extensions.py  tools_keywords.py  tools_reporting.py
tests/integration/: conftest.py  test_tools_budgets_integration.py
tests/unit/: conftest.py  test_tools_budgets.py
